--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
         <label for="nombreTrabajo">Nombre del trabajo (para el archivo PDF):</label>
         <input type="text" id="nombreTrabajo" placeholder="Ej: Massiel-Fisica-Proyecto">
 
+        <div style="font-size: 14px; color: #555;">
+            🗜️ <strong>Comprimir PDF (si pesa mucho):</strong>
+            <a href="https://www.ilovepdf.com/es/comprimir_pdf" target="_blank" style="display: inline-block; margin-left: 8px; padding: 5px 12px; background-color: #2196F3; color: white; border-radius: 4px; text-decoration: none; font-size: 13px;">Click acá</a>
+        </div>
+
         <label for="imagenes">Agregar Imágenes (puedes agregar una por una o múltiples):</label>
         <input type="file" id="imagenes" multiple accept="image/*">
 
